--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="settings">Settings</string>
     <string name="sendServer">Send Server:</string>
     <string name="sendEmail">Send Email</string>
+    <string name="senderName">Sender Name</string>
     <string name="password">Password</string>
     <string name="maxRetry">Max Retry Times</string>
     <string name="retryTimeInterval">Retry TimeInterval</string>
